<resources>
    <string name="app_name">investapp</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="whatsapp_icon_desc">WhatsApp Icon</string>
    <string name="icon1_desc">Description for Icon 1</string>
    <string name="icon2_desc">Description for Icon 2</string>
    <string name="icon3_desc">Description for Icon 3</string>
    <string name="icon4_desc">Description for Icon 4</string>
    <string name="result_format">Future Value: ksh%.2f</string>

    <string-array name="payment_methods">
        <item>MPESA</item>
        <item>Bank</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_our_products">Our_products</string>
    <string name="menu_Advisor">Advisor</string>
    <string name="menu_help">Help</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_news">News</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>


</resources>