<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">



    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.investapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />


    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.investapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.investapp.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_accounts"
        android:name="com.example.investapp.ui.accounts.accountsFragment"
        android:label="@string/menu_accounts"
        tools:layout="@layout/fragment_accounts" />
    <fragment
        android:id="@+id/nav_our_products"
        android:name="com.example.investapp.ui.our_products.Our_ProductsFragment"
        android:label="@string/menu_our_products"
        tools:layout="@layout/fragment_our_products" />
    <fragment
        android:id="@+id/advisorFragment"
        android:name="com.example.investapp.ui.Advisor.AdvisorFragment"
        android:label="AdvisorFragment" />
    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.investapp.ui.appnews.newsFragment"
        android:label="newsFragment" />
    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.investapp.ui.dashboard.DashboardFragment"
        android:label="dashboardFragment" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.investapp.ui.help.helpFragment"
        android:label="helpFragment" />
    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.investapp.ui.share.shareFragment"
        android:label="shareFragment" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.investapp.ui.logout.logoutFragment"
        android:label="@string/menu_logout" />

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.investapp.MainFragment"
        android:label="fragment_main"
        tools:layout="@layout/fragment_main" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.investapp.ui.home.HomeFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_home" />

</navigation>