<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FBFBFB"
    android:padding="16dp">

    <!-- Bonds item -->
    <LinearLayout
        android:id="@+id/bonds_item"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/bonds_icon"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="69dp"
            android:layout_height="65dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/icon1_desc"
            android:src="@drawable/bonds" />



        <TextView
            android:textColor="#000000"
            android:background="@color/white"
            android:layout_width="171dp"
            android:layout_height="68dp"
            android:text="Bonds"
            android:textSize="30sp" />
    </LinearLayout>

    <!-- Retirement plan item -->
    <LinearLayout
        android:id="@+id/retirement_item"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/retirement_icon"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="67dp"
            android:layout_height="68dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/icon2_desc"
            android:src="@drawable/reteire" />

        <TextView
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="Retirement plan"
            android:textSize="30sp" />
    </LinearLayout>

    <!-- Money marketing item -->
    <LinearLayout
        android:id="@+id/money_market_item"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/money_market_icon"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="65dp"
            android:layout_height="61dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/icon3_desc"
            android:src="@drawable/mmf" />

        <TextView
            android:textColor="#000000"
            android:layout_width="189dp"
            android:layout_height="64dp"
            android:text="MoneyMarket"
            android:textSize="30sp" />
    </LinearLayout>

    <!-- Real estate item -->
    <LinearLayout
        android:id="@+id/real_estate_item"
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/real_estate_icon"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="59dp"
            android:layout_height="69dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/icon4_desc"
            android:src="@drawable/estate" />

        <TextView
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Real estate"
            android:textSize="30sp" />
    </LinearLayout>

</LinearLayout>
